--- a/pio.css
+++ b/pio.css
@@ -78,7 +78,7 @@
     display: none;
     cursor: pointer;
     position: absolute;
-    transition: all .3s;
+    transition: all .3;
     background: url(avatar.png) center/contain;
     opacity: 0.7;
 }
@@ -101,7 +101,7 @@
 }
 
 .pio-container.left {
-	transition: all .3s;
+	transition: all .3;
 	bottom: 0;
     left: 0
 }
@@ -127,7 +127,7 @@
     top: -20px;
     opacity: 0;
     position: absolute;
-    transition: opacity .3s;
+    transition: opacity .3;
 }
 
 .pio-container.left .pio-action {
@@ -159,11 +159,11 @@
 }
 
 :root {
-  --home-icon: url("./live2d/icon/0/home.png");
-  --close-icon: url("./live2d/icon/0/close.png");
-  --skin-icon: url("./live2d/icon/0/skin.png");
-  --info-icon: url("./live2d/icon/0/info.png");
-  --night-icon: url("./live2d/icon/0/night.png");
+  --home-icon: url("./icon/0/home.png");
+  --close-icon: url("./icon/0/close.png");
+  --skin-icon: url("./icon/0/skin.png");
+  --info-icon: url("./icon/0/info.png");
+  --night-icon: url("./icon/0/night.png");
 }
 
 .pio-action .pio-home {
@@ -199,7 +199,7 @@
     position: absolute;
     word-break: break-all;
     border: 1px solid #eee;
-    transition: opacity .3s, visibility .3s;
+    transition: opacity .3, visibility .3;
 }
 
 .pio-container .pio-dialog.active {
